packages/wasm-guest/tests/macro_error/free_function.stderr
error: `workflow` functions should have no runtime parameters
 --> tests/macro_error/free_function.rs:7:22
  |
7 |     async fn counter(&self) {}
  |                      ^^^^^

error: `workflow` functions should be free functions, not methods
 --> tests/macro_error/free_function.rs:7:22
  |
7 |     async fn counter(&self) {}
  |                      ^^^^^
