packages/wasm-guest/tests/macro_error/free_function.rs
use serpent_automation_wasm_guest::workflow;

pub struct X;

impl X {
    #[workflow]
    async fn counter(&self) {}
}

fn main() {}
